--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
         uses: actions/checkout@v4
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
-      - name: Run cucumber tag
+      - name: Cypress run
         uses: cypress-io/github-action@v6
+      - name: Run cucumber tag
         run: npm run cy:run:tag
