--- a/.github/workflows/cypres.yml
+++ b/.github/workflows/cypres.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          command: npx cypress run --env TAGS="@regression"
+          command: npx cypress run --record --key ${{ secrets.CYPRESS_RECORD_KEY }} --env TAGS="@regression"
           record: true
           parallel: true
         env:
