--- a/.github/workflows/cypres.yml
+++ b/.github/workflows/cypres.yml
@@ -1,7 +1,7 @@
 name: Cypress Tests
 on: [push]
 jobs:
-  cypress-run:
+  regression:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -15,6 +15,26 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           command: npx cypress run --record --key ${{ secrets.CYPRESS_RECORD_KEY }} --env TAGS="@regression"
+          record: true
+          parallel: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+
+  smoke:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2] # Uses 2 parallel instances
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        with:
+          command: npx cypress run --record --key ${{ secrets.CYPRESS_RECORD_KEY }} --env TAGS="@smoke"
           record: true
           parallel: true
         env:
